[fix&refactor] 공사업체 관련 세부 요청사항 조정  (#136)
* refactor: 받은 수리 요청 조회 choosing 상태 반환 제외

* refactor: 공사업체 프로필 관리 프로필 이미지 요청 분리